<resources>
    <string name="app_name">维护管理系统</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="login_out">退出登录</string>
    <string name="about_self">关于</string>
    <string name="check_update">检查更新</string>
    <string name="konwledge_lib">知识库</string>
    <string name="setting">设置</string>
    <string name="sign_">签到</string>
    <string name="open_camera">打开相机</string>
    <string name="self_head_pic">个人头像</string>

</resources>