<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/self_fm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/page_bg_color"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical"
        android:paddingStart="30dp">

        <RelativeLayout
            android:id="@+id/layout_head_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="50dp">

            <ImageView
                android:id="@+id/iv_head_pic"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/self_head_pic"
                android:src="@mipmap/ic_launcher_round" />

            <ImageView
                android:id="@+id/iv_open_camera"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:background="@drawable/circle_button_bg"
                android:contentDescription="@string/open_camera"
                android:padding="5dp"
                android:src="@mipmap/camera_icon" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:lineSpacingExtra="5dp"
            android:textStyle="bold" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="240dp"
        android:divider="@drawable/shape_divider_linear"
        android:orientation="vertical"
        android:showDividers="middle|end">

        <TextView
            android:id="@+id/fm_self_item1"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/self_icon_left_1"
            android:drawablePadding="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/sign_"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fm_self_item2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/self_icon_left_2"
            android:drawablePadding="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/setting"
            android:textSize="16sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/fm_self_item3"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/self_icon_left_3"
            android:drawablePadding="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/konwledge_lib"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fm_self_item4"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/self_icon_left_4"
            android:drawablePadding="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/check_update"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <TextView
            android:id="@+id/fm_self_item5"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@android:color/transparent"
            android:drawableLeft="@mipmap/self_icon_left_5"
            android:drawablePadding="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/check_update"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/fm_self_item6"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:drawableLeft="@mipmap/self_icon_left_6"
            android:drawablePadding="16dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:paddingStart="30dp"
            android:paddingEnd="0dp"
            android:text="@string/login_out"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>